# similarity-network-fusion

./: .flake8  .gitignore  pyproject.toml  readme.md
data/: download_data.sh
network_fusion/: distances.py  epsilon.py  local_similarities.py  neighborhoods.py  normalized_weights.py  similarity_kernel.py  similarity_network.py  weights.py
notebooks/: API check - axis argument for numpy.mean.ipynb  API check - enumerate on numpy.ndarrays.ipynb  API check - enumerate(..., start).ipynb  API check - numpy broadcasting.ipynb  API check - numpy division broadcasting.ipynb  Check versions.ipynb  Load data from txt files.ipynb  View individual TCGA file.ipynb  WIP - Download data.ipynb
tests/: test_network_fusion.py  test_similarity_kernel.py
tests/helpers/: __init__.py  fake_data.py  nonzero_except_diagonal.py
tests/integration/: test_network_fusion.py  test_similarity_network.py
tests/unit/: test_calculate_normalized_weights.py  test_distances.py  test_epsilon.py  test_neighborhoods.py  test_similarity_kernel.py  test_weights.py
