[tool.poetry]
name = "network-fusion"
version = "0.1.0"
description = ""
authors = ["William C Grisaitis <william@grisait.is>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
aiohttp = "^3.6.2"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
