[tool.poetry]
name = "network-fusion"
version = "0.1.0"
description = ""
authors = ["William C Grisaitis <wgrisaitis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
aiofiles = "^0.4.0"
aiohttp = "^3.6.2"
numpy = "^1.18.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.4.4"
flake8 = "^3.7.9"
tox = "^3.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
